# Dobutsu-Shogi

./: README.md
python_client/: pyproject.toml
python_client/src/: main.py
